* Fix VS filters

--- a/platforms/windows/projects/World/World.vcxproj.filters
+++ b/platforms/windows/projects/World/World.vcxproj.filters
@@ -422,16 +422,16 @@
     <ClCompile Include="$(MC_ROOT)\source\world\tile\WireTile.cpp">
       <Filter>Source Files\Tile</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\world\level\path\Node.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\world\level\path\BinaryHeap.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MC_ROOT)\source\world\level\path\Node.cpp">
+      <Filter>Source Files\Level\Path</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\level\path\Path.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Level\Path</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\world\level\path\PathFinder.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\source\world\level\path\BinaryHeap.cpp">
       <Filter>Source Files\Level\Path</Filter>
     </ClCompile>
   </ItemGroup>
@@ -715,16 +715,16 @@
     <ClInclude Include="$(MC_ROOT)\source\world\tile\WireTile.hpp">
       <Filter>Header Files\Tile</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\world\level\path\Node.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\world\level\path\BinaryHeap.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\world\level\path\Node.hpp">
+      <Filter>Header Files\Level\Path</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\level\path\Path.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Level\Path</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\world\level\path\PathFinder.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\source\world\level\path\BinaryHeap.hpp">
       <Filter>Header Files\Level\Path</Filter>
     </ClInclude>
   </ItemGroup>
